--- a/about.html
+++ b/about.html
@@ -61,6 +61,7 @@
 
                     <div class="s-header__contact">
                         <a href="contact.html" class="btn btn--primary s-header__contact-btn">Let's Work Together</a>
+                        <h3>My name is Seba</h3>
                     </div>
 
                 </nav>
