--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="index.html">
-
+                            <span style="font-weight: bold; font-size: 24px; color: #ff9200;">SEBA.</span>
                         </a>
                     </div>
 
@@ -109,14 +109,14 @@
                     </div> <!-- pageintro -->   
                     
                     <div class="row pagemedia">
-                        <d class="column xl-12">
+                        <div class="column xl-12">
                             <figure class="page-media">                                
                                 <img src="images/thumbs/contact/contact-1200.jpg" 
                                      srcset="images/thumbs/contact/contact-2400.jpg 2400w, 
                                              images/thumbs/contact/contact-1200.jpg 1200w, 
                                              images/thumbs/contact/contact-600.jpg 600w" sizes="(max-width: 2400px) 100vw, 2400px" alt="">
                             </figure>
-                        </d>
+                        </div>
                     </div> <!-- pagemedia --> 
 
                     <div class="row width-narrower pagemain">
