--- a/services.html
+++ b/services.html
@@ -55,7 +55,7 @@
                 <div class="s-header__block">
                     <div class="s-header__logo">
                         <a class="logo" href="index.html">
-
+                            <span style="font-weight: bold; font-size: 24px; color: #ff9200;">SEBA.</span>
                         </a>
                     </div>
 
