--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
       <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
+    <div class="header__cta-box">
+      <span>Let's work together</span>
+      <div class="cta-dot"></div>
+    </div>
   </header>
 
   <!-- ========== HERO ========== -->
